--- a/start.html
+++ b/start.html
@@ -3,15 +3,59 @@
   <head>
   <title>DDONGS FAM</title>
   <meta charset="utf-8">
+  <style>
+
+  body{
+    margin: 0;
+  }
+    a {
+      color: black; text-decoration: none;
+      font-size: none;
+    }
+    #active {
+      color:red;
+  }
+    .saw {
+      color:gray;
+      }
+
+    h1{
+      font-size:50px;
+      text-align: center;
+      border-bottom: 3px solid brown;
+      margin: 0;
+      padding: 20PX;
+
+    }
+
+    ol{
+      border-right: 3px solid brown ;
+      width: 80px;
+      margin: 0;
+      padding: 10px;
+
+    }
+  </style>
 </head>
 <body>
-  <h1><a href="start.html">WEB</a></h1>
+  <h1><a href="start.html">DDONGS'FAM</a></h1>
   <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
+  <li><a href="1.html" class="saw">HTML</a></li>
+  <li><a href="2.html" class="saw active" id="active">CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
 </ol>
+<!--
+<h1><a href="start.html"><font color="gray">WEB</font></a></h1>
+<ol>
+<li><a href="1.html"><font color="red">HTML</font></a></li>
+<li><a href="2.html"><font color="blue">CSS</font></a></li>
+<li><a href="3.html"><font color="purple">JavaScript</font></a></li>
+</ol>
+-->
 <h2>WEB</h2>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 <p><a href="https://www.w3.org/TR/html52/"
   target="_blank" title="ddongfam">Learn the
   technical</a> 웹의 다른 뜻은 다음과 같다.
@@ -30,6 +74,27 @@ The HTML element defines a paragraph.
 A paragraph always starts on a new line, and
 browsers automatically add some white space
 (a margin) before and after a paragraph.
+</p>
+<p>
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://first-start.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </p>
   </body>
 </html>
